Add placeholders to suppress errors caused by chrome
